# mini_vector

./: Cargo.toml  Dockerfile  FEASIBILITY.md  README.md  STANDARDIZATION.md  mini_vector.yml  mini_vector_http_in.yml  mini_vector_json_parse.yml
configs/: linux_syslog.yml  rules.yml  web_access.yml  windows_event.yml
docs/: 01_kien_truc_mimi_soc_vi.md  02_ai_guide.md  03_kien_truc_3_lop.md  benchmark.md  deploy.md  detection.md  observability.md  schema.md
scripts/: bench_http.py
src/: batcher.rs  config.rs  event.rs  health.rs  main.rs  pipeline.rs  queue.rs  reload.rs  router.rs
src/sinks/: console.rs  file.rs  http.rs  mod.rs  opensearch.rs
src/sources/: file.rs  http.rs  mod.rs  stdin.rs  syslog.rs  tcp.rs
src/transforms/: add_field.rs  contains_filter.rs  detect.rs  json_parse.rs  mod.rs  normalize_schema.rs  regex_parse.rs  remap.rs  route.rs  script.rs
test/: integration_test.rs  receiver.py  topology_test.rs
tests/: integration.py  test_compliance.py  test_config.yml  test_opensearch.py  test_opensearch.yml
