[package]
name = "mini_vector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.8.7", features = ["json"] }
regex = "1.12.2"
chrono = { version = "0.4", features = ["serde", "clock"] }
indexmap = { version = "2", features = ["serde"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
notify = "8.2.0"
glob = "0.3.3"
tower-http = { version = "0.5", features = ["decompression-gzip"] }
bytes = "1"
base64 = "0.21"
vrl = { version = "0.28.1", default-features = true }
crc32fast = "1.4"
sled = "0.34"

[dev-dependencies]
tempfile = "3"
